lib/frontend/parse/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On NODE shift to state 1
-- On program shift to state 242
-- On nodes shift to state 243
-- On node shift to state 245
## Reductions:

State 1:
## Known stack suffix:
## NODE
## LR(1) items:
node -> NODE . IDENT LPAREN params_opt RPAREN RETURNS LPAREN params_opt RPAREN node_contracts_opt instances_opt LOCALS vdecls_opt STATES state_list SEMI INIT IDENT state_invariants_opt TRANS transitions END [ NODE EOF ]
## Transitions:
-- On IDENT shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## NODE IDENT
## LR(1) items:
node -> NODE IDENT . LPAREN params_opt RPAREN RETURNS LPAREN params_opt RPAREN node_contracts_opt instances_opt LOCALS vdecls_opt STATES state_list SEMI INIT IDENT state_invariants_opt TRANS transitions END [ NODE EOF ]
## Transitions:
-- On LPAREN shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## NODE IDENT LPAREN
## LR(1) items:
node -> NODE IDENT LPAREN . params_opt RPAREN RETURNS LPAREN params_opt RPAREN node_contracts_opt instances_opt LOCALS vdecls_opt STATES state_list SEMI INIT IDENT state_invariants_opt TRANS transitions END [ NODE EOF ]
## Transitions:
-- On IDENT shift to state 4
-- On params_opt shift to state 11
-- On params shift to state 238
-- On param shift to state 239
## Reductions:
-- On RPAREN
--   reduce production params_opt ->

State 4:
## Known stack suffix:
## IDENT
## LR(1) items:
param -> IDENT . COLON ty [ RPAREN COMMA ]
## Transitions:
-- On COLON shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## IDENT COLON
## LR(1) items:
param -> IDENT COLON . ty [ RPAREN COMMA ]
## Transitions:
-- On TREAL shift to state 6
-- On TINT shift to state 7
-- On TBOOL shift to state 8
-- On IDENT shift to state 9
-- On ty shift to state 10
## Reductions:

State 6:
## Known stack suffix:
## TREAL
## LR(1) items:
ty -> TREAL . [ SEMI RPAREN COMMA ]
## Transitions:
## Reductions:
-- On SEMI RPAREN COMMA
--   reduce production ty -> TREAL

State 7:
## Known stack suffix:
## TINT
## LR(1) items:
ty -> TINT . [ SEMI RPAREN COMMA ]
## Transitions:
## Reductions:
-- On SEMI RPAREN COMMA
--   reduce production ty -> TINT

State 8:
## Known stack suffix:
## TBOOL
## LR(1) items:
ty -> TBOOL . [ SEMI RPAREN COMMA ]
## Transitions:
## Reductions:
-- On SEMI RPAREN COMMA
--   reduce production ty -> TBOOL

State 9:
## Known stack suffix:
## IDENT
## LR(1) items:
ty -> IDENT . [ SEMI RPAREN COMMA ]
## Transitions:
## Reductions:
-- On SEMI RPAREN COMMA
--   reduce production ty -> IDENT

State 10:
## Known stack suffix:
## IDENT COLON ty
## LR(1) items:
param -> IDENT COLON ty . [ RPAREN COMMA ]
## Transitions:
## Reductions:
-- On RPAREN COMMA
--   reduce production param -> IDENT COLON ty

State 11:
## Known stack suffix:
## NODE IDENT LPAREN params_opt
## LR(1) items:
node -> NODE IDENT LPAREN params_opt . RPAREN RETURNS LPAREN params_opt RPAREN node_contracts_opt instances_opt LOCALS vdecls_opt STATES state_list SEMI INIT IDENT state_invariants_opt TRANS transitions END [ NODE EOF ]
## Transitions:
-- On RPAREN shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## NODE IDENT LPAREN params_opt RPAREN
## LR(1) items:
node -> NODE IDENT LPAREN params_opt RPAREN . RETURNS LPAREN params_opt RPAREN node_contracts_opt instances_opt LOCALS vdecls_opt STATES state_list SEMI INIT IDENT state_invariants_opt TRANS transitions END [ NODE EOF ]
## Transitions:
-- On RETURNS shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## NODE IDENT LPAREN params_opt RPAREN RETURNS
## LR(1) items:
node -> NODE IDENT LPAREN params_opt RPAREN RETURNS . LPAREN params_opt RPAREN node_contracts_opt instances_opt LOCALS vdecls_opt STATES state_list SEMI INIT IDENT state_invariants_opt TRANS transitions END [ NODE EOF ]
## Transitions:
-- On LPAREN shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## NODE IDENT LPAREN params_opt RPAREN RETURNS LPAREN
## LR(1) items:
node -> NODE IDENT LPAREN params_opt RPAREN RETURNS LPAREN . params_opt RPAREN node_contracts_opt instances_opt LOCALS vdecls_opt STATES state_list SEMI INIT IDENT state_invariants_opt TRANS transitions END [ NODE EOF ]
## Transitions:
-- On IDENT shift to state 4
-- On params_opt shift to state 15
-- On params shift to state 238
-- On param shift to state 239
## Reductions:
-- On RPAREN
--   reduce production params_opt ->

State 15:
## Known stack suffix:
## NODE IDENT LPAREN params_opt RPAREN RETURNS LPAREN params_opt
## LR(1) items:
node -> NODE IDENT LPAREN params_opt RPAREN RETURNS LPAREN params_opt . RPAREN node_contracts_opt instances_opt LOCALS vdecls_opt STATES state_list SEMI INIT IDENT state_invariants_opt TRANS transitions END [ NODE EOF ]
## Transitions:
-- On RPAREN shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## NODE IDENT LPAREN params_opt RPAREN RETURNS LPAREN params_opt RPAREN
## LR(1) items:
node -> NODE IDENT LPAREN params_opt RPAREN RETURNS LPAREN params_opt RPAREN . node_contracts_opt instances_opt LOCALS vdecls_opt STATES state_list SEMI INIT IDENT state_invariants_opt TRANS transitions END [ NODE EOF ]
## Transitions:
-- On GUARANTEE shift to state 17
-- On ASSUME shift to state 110
-- On node_contracts_opt shift to state 115
-- On node_contracts shift to state 237
## Reductions:
-- On LOCALS INSTANCES
--   reduce production node_contracts_opt ->

State 17:
## Known stack suffix:
## GUARANTEE
## LR(1) items:
node_contracts -> GUARANTEE . ltl SEMI node_contracts [ LOCALS INSTANCES ]
node_contracts -> GUARANTEE . ltl SEMI [ LOCALS INSTANCES ]
## Transitions:
-- On X shift to state 18
-- On TRUE shift to state 19
-- On PREK shift to state 20
-- On PRE shift to state 67
-- On NOT shift to state 71
-- On MINUS shift to state 23
-- On LPAREN shift to state 72
-- On LBRACE shift to state 73
-- On INT shift to state 25
-- On IDENT shift to state 76
-- On G shift to state 85
-- On FALSE shift to state 86
-- On ltl_un shift to state 93
-- On ltl_or shift to state 94
-- On ltl_imp shift to state 102
-- On ltl_atom shift to state 88
-- On ltl_and shift to state 101
-- On ltl shift to state 108
-- On hexpr shift to state 89
-- On fo_atom_noparen shift to state 92
-- On arith_unary shift to state 27
-- On arith_mul shift to state 28
-- On arith_atom shift to state 31
-- On arith shift to state 84
## Reductions:

State 18:
## Known stack suffix:
## X
## LR(1) items:
ltl_un -> X . ltl_un [ SEMI RPAREN OR IMPL AND ]
## Transitions:
-- On X shift to state 18
-- On TRUE shift to state 19
-- On PREK shift to state 20
-- On PRE shift to state 67
-- On NOT shift to state 71
-- On MINUS shift to state 23
-- On LPAREN shift to state 72
-- On LBRACE shift to state 73
-- On INT shift to state 25
-- On IDENT shift to state 76
-- On G shift to state 85
-- On FALSE shift to state 86
-- On ltl_un shift to state 107
-- On ltl_atom shift to state 88
-- On hexpr shift to state 89
-- On fo_atom_noparen shift to state 92
-- On arith_unary shift to state 27
-- On arith_mul shift to state 28
-- On arith_atom shift to state 31
-- On arith shift to state 84
## Reductions:

State 19:
## Known stack suffix:
## TRUE
## LR(1) items:
fo_atom_noparen -> TRUE . [ SEMI RPAREN OR IMPL AND ]
## Transitions:
## Reductions:
-- On SEMI RPAREN OR IMPL AND
--   reduce production fo_atom_noparen -> TRUE

State 20:
## Known stack suffix:
## PREK
## LR(1) items:
hexpr -> PREK . LPAREN iexpr COMMA INT RPAREN [ SEMI RPAREN OR NEQ LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On LPAREN shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## PREK LPAREN
## LR(1) items:
hexpr -> PREK LPAREN . iexpr COMMA INT RPAREN [ SEMI RPAREN OR NEQ LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On NOT shift to state 22
-- On MINUS shift to state 23
-- On LPAREN shift to state 41
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On iexpr_or shift to state 42
-- On iexpr_not shift to state 44
-- On iexpr_atom shift to state 45
-- On iexpr_and shift to state 58
-- On iexpr shift to state 63
-- On arith_unary shift to state 27
-- On arith_mul shift to state 28
-- On arith_atom shift to state 31
-- On arith shift to state 49
## Reductions:

State 22:
## Known stack suffix:
## NOT
## LR(1) items:
iexpr_not -> NOT . iexpr_not [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
-- On NOT shift to state 22
-- On MINUS shift to state 23
-- On LPAREN shift to state 41
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On iexpr_not shift to state 62
-- On iexpr_atom shift to state 45
-- On arith_unary shift to state 27
-- On arith_mul shift to state 28
-- On arith_atom shift to state 31
-- On arith shift to state 49
## Reductions:

State 23:
## Known stack suffix:
## MINUS
## LR(1) items:
arith_unary -> MINUS . arith_unary [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On MINUS shift to state 23
-- On LPAREN shift to state 24
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On arith_unary shift to state 40
-- On arith_atom shift to state 31
## Reductions:

State 24:
## Known stack suffix:
## LPAREN
## LR(1) items:
arith_atom -> LPAREN . arith RPAREN [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On MINUS shift to state 23
-- On LPAREN shift to state 24
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On arith_unary shift to state 27
-- On arith_mul shift to state 28
-- On arith_atom shift to state 31
-- On arith shift to state 34
## Reductions:

State 25:
## Known stack suffix:
## INT
## LR(1) items:
arith_atom -> INT . [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith_atom -> INT

State 26:
## Known stack suffix:
## IDENT
## LR(1) items:
arith_atom -> IDENT . [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith_atom -> IDENT

State 27:
## Known stack suffix:
## arith_unary
## LR(1) items:
arith_mul -> arith_unary . [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith_mul -> arith_unary

State 28:
## Known stack suffix:
## arith_mul
## LR(1) items:
arith -> arith_mul . [ THEN SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
arith_mul -> arith_mul . STAR arith_unary [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
arith_mul -> arith_mul . SLASH arith_unary [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 29
-- On SLASH shift to state 32
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith -> arith_mul

State 29:
## Known stack suffix:
## arith_mul STAR
## LR(1) items:
arith_mul -> arith_mul STAR . arith_unary [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On MINUS shift to state 23
-- On LPAREN shift to state 24
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On arith_unary shift to state 30
-- On arith_atom shift to state 31
## Reductions:

State 30:
## Known stack suffix:
## arith_mul STAR arith_unary
## LR(1) items:
arith_mul -> arith_mul STAR arith_unary . [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith_mul -> arith_mul STAR arith_unary

State 31:
## Known stack suffix:
## arith_atom
## LR(1) items:
arith_unary -> arith_atom . [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith_unary -> arith_atom

State 32:
## Known stack suffix:
## arith_mul SLASH
## LR(1) items:
arith_mul -> arith_mul SLASH . arith_unary [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On MINUS shift to state 23
-- On LPAREN shift to state 24
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On arith_unary shift to state 33
-- On arith_atom shift to state 31
## Reductions:

State 33:
## Known stack suffix:
## arith_mul SLASH arith_unary
## LR(1) items:
arith_mul -> arith_mul SLASH arith_unary . [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith_mul -> arith_mul SLASH arith_unary

State 34:
## Known stack suffix:
## LPAREN arith
## LR(1) items:
arith -> arith . PLUS arith_mul [ RPAREN PLUS MINUS ]
arith -> arith . MINUS arith_mul [ RPAREN PLUS MINUS ]
arith_atom -> LPAREN arith . RPAREN [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On RPAREN shift to state 35
-- On PLUS shift to state 36
-- On MINUS shift to state 38
## Reductions:

State 35:
## Known stack suffix:
## LPAREN arith RPAREN
## LR(1) items:
arith_atom -> LPAREN arith RPAREN . [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith_atom -> LPAREN arith RPAREN

State 36:
## Known stack suffix:
## arith PLUS
## LR(1) items:
arith -> arith PLUS . arith_mul [ THEN SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On MINUS shift to state 23
-- On LPAREN shift to state 24
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On arith_unary shift to state 27
-- On arith_mul shift to state 37
-- On arith_atom shift to state 31
## Reductions:

State 37:
## Known stack suffix:
## arith PLUS arith_mul
## LR(1) items:
arith -> arith PLUS arith_mul . [ THEN SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
arith_mul -> arith_mul . STAR arith_unary [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
arith_mul -> arith_mul . SLASH arith_unary [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 29
-- On SLASH shift to state 32
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith -> arith PLUS arith_mul

State 38:
## Known stack suffix:
## arith MINUS
## LR(1) items:
arith -> arith MINUS . arith_mul [ THEN SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On MINUS shift to state 23
-- On LPAREN shift to state 24
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On arith_unary shift to state 27
-- On arith_mul shift to state 39
-- On arith_atom shift to state 31
## Reductions:

State 39:
## Known stack suffix:
## arith MINUS arith_mul
## LR(1) items:
arith -> arith MINUS arith_mul . [ THEN SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
arith_mul -> arith_mul . STAR arith_unary [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
arith_mul -> arith_mul . SLASH arith_unary [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On STAR shift to state 29
-- On SLASH shift to state 32
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith -> arith MINUS arith_mul

State 40:
## Known stack suffix:
## MINUS arith_unary
## LR(1) items:
arith_unary -> MINUS arith_unary . [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE IMPL GT GE EQ COMMA AND
--   reduce production arith_unary -> MINUS arith_unary

State 41:
## Known stack suffix:
## LPAREN
## LR(1) items:
arith_atom -> LPAREN . arith RPAREN [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE GT GE EQ COMMA AND ]
iexpr_atom -> LPAREN . iexpr RPAREN [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
-- On NOT shift to state 22
-- On MINUS shift to state 23
-- On LPAREN shift to state 41
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On iexpr_or shift to state 42
-- On iexpr_not shift to state 44
-- On iexpr_atom shift to state 45
-- On iexpr_and shift to state 58
-- On iexpr shift to state 59
-- On arith_unary shift to state 27
-- On arith_mul shift to state 28
-- On arith_atom shift to state 31
-- On arith shift to state 61
## Reductions:

State 42:
## Known stack suffix:
## iexpr_or
## LR(1) items:
iexpr -> iexpr_or . [ THEN SEMI RPAREN RBRACK RBRACE COMMA ]
iexpr_or -> iexpr_or . OR iexpr_and [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA ]
## Transitions:
-- On OR shift to state 43
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE COMMA
--   reduce production iexpr -> iexpr_or

State 43:
## Known stack suffix:
## iexpr_or OR
## LR(1) items:
iexpr_or -> iexpr_or OR . iexpr_and [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA ]
## Transitions:
-- On NOT shift to state 22
-- On MINUS shift to state 23
-- On LPAREN shift to state 41
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On iexpr_not shift to state 44
-- On iexpr_atom shift to state 45
-- On iexpr_and shift to state 46
-- On arith_unary shift to state 27
-- On arith_mul shift to state 28
-- On arith_atom shift to state 31
-- On arith shift to state 49
## Reductions:

State 44:
## Known stack suffix:
## iexpr_not
## LR(1) items:
iexpr_and -> iexpr_not . [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND
--   reduce production iexpr_and -> iexpr_not

State 45:
## Known stack suffix:
## iexpr_atom
## LR(1) items:
iexpr_not -> iexpr_atom . [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND
--   reduce production iexpr_not -> iexpr_atom

State 46:
## Known stack suffix:
## iexpr_or OR iexpr_and
## LR(1) items:
iexpr_and -> iexpr_and . AND iexpr_not [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
iexpr_or -> iexpr_or OR iexpr_and . [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA ]
## Transitions:
-- On AND shift to state 47
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE OR COMMA
--   reduce production iexpr_or -> iexpr_or OR iexpr_and

State 47:
## Known stack suffix:
## iexpr_and AND
## LR(1) items:
iexpr_and -> iexpr_and AND . iexpr_not [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
-- On NOT shift to state 22
-- On MINUS shift to state 23
-- On LPAREN shift to state 41
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On iexpr_not shift to state 48
-- On iexpr_atom shift to state 45
-- On arith_unary shift to state 27
-- On arith_mul shift to state 28
-- On arith_atom shift to state 31
-- On arith shift to state 49
## Reductions:

State 48:
## Known stack suffix:
## iexpr_and AND iexpr_not
## LR(1) items:
iexpr_and -> iexpr_and AND iexpr_not . [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND
--   reduce production iexpr_and -> iexpr_and AND iexpr_not

State 49:
## Known stack suffix:
## arith
## LR(1) items:
arith -> arith . PLUS arith_mul [ THEN SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE GT GE EQ COMMA AND ]
arith -> arith . MINUS arith_mul [ THEN SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE GT GE EQ COMMA AND ]
iexpr_atom -> arith . relop arith [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
iexpr_atom -> arith . [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
-- On PLUS shift to state 36
-- On NEQ shift to state 50
-- On MINUS shift to state 38
-- On LT shift to state 51
-- On LE shift to state 52
-- On GT shift to state 53
-- On GE shift to state 54
-- On EQ shift to state 55
-- On relop shift to state 56
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND
--   reduce production iexpr_atom -> arith

State 50:
## Known stack suffix:
## NEQ
## LR(1) items:
relop -> NEQ . [ PREK PRE MINUS LPAREN LBRACE INT IDENT ]
## Transitions:
## Reductions:
-- On PREK PRE MINUS LPAREN LBRACE INT IDENT
--   reduce production relop -> NEQ

State 51:
## Known stack suffix:
## LT
## LR(1) items:
relop -> LT . [ PREK PRE MINUS LPAREN LBRACE INT IDENT ]
## Transitions:
## Reductions:
-- On PREK PRE MINUS LPAREN LBRACE INT IDENT
--   reduce production relop -> LT

State 52:
## Known stack suffix:
## LE
## LR(1) items:
relop -> LE . [ PREK PRE MINUS LPAREN LBRACE INT IDENT ]
## Transitions:
## Reductions:
-- On PREK PRE MINUS LPAREN LBRACE INT IDENT
--   reduce production relop -> LE

State 53:
## Known stack suffix:
## GT
## LR(1) items:
relop -> GT . [ PREK PRE MINUS LPAREN LBRACE INT IDENT ]
## Transitions:
## Reductions:
-- On PREK PRE MINUS LPAREN LBRACE INT IDENT
--   reduce production relop -> GT

State 54:
## Known stack suffix:
## GE
## LR(1) items:
relop -> GE . [ PREK PRE MINUS LPAREN LBRACE INT IDENT ]
## Transitions:
## Reductions:
-- On PREK PRE MINUS LPAREN LBRACE INT IDENT
--   reduce production relop -> GE

State 55:
## Known stack suffix:
## EQ
## LR(1) items:
relop -> EQ . [ PREK PRE MINUS LPAREN LBRACE INT IDENT ]
## Transitions:
## Reductions:
-- On PREK PRE MINUS LPAREN LBRACE INT IDENT
--   reduce production relop -> EQ

State 56:
## Known stack suffix:
## arith relop
## LR(1) items:
iexpr_atom -> arith relop . arith [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
-- On MINUS shift to state 23
-- On LPAREN shift to state 24
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On arith_unary shift to state 27
-- On arith_mul shift to state 28
-- On arith_atom shift to state 31
-- On arith shift to state 57
## Reductions:

State 57:
## Known stack suffix:
## arith relop arith
## LR(1) items:
arith -> arith . PLUS arith_mul [ THEN SEMI RPAREN RBRACK RBRACE PLUS OR MINUS COMMA AND ]
arith -> arith . MINUS arith_mul [ THEN SEMI RPAREN RBRACK RBRACE PLUS OR MINUS COMMA AND ]
iexpr_atom -> arith relop arith . [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
-- On PLUS shift to state 36
-- On MINUS shift to state 38
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND
--   reduce production iexpr_atom -> arith relop arith

State 58:
## Known stack suffix:
## iexpr_and
## LR(1) items:
iexpr_and -> iexpr_and . AND iexpr_not [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
iexpr_or -> iexpr_and . [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA ]
## Transitions:
-- On AND shift to state 47
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE OR COMMA
--   reduce production iexpr_or -> iexpr_and

State 59:
## Known stack suffix:
## LPAREN iexpr
## LR(1) items:
iexpr_atom -> LPAREN iexpr . RPAREN [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
-- On RPAREN shift to state 60
## Reductions:

State 60:
## Known stack suffix:
## LPAREN iexpr RPAREN
## LR(1) items:
iexpr_atom -> LPAREN iexpr RPAREN . [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND
--   reduce production iexpr_atom -> LPAREN iexpr RPAREN

State 61:
## Known stack suffix:
## LPAREN arith
## LR(1) items:
arith -> arith . PLUS arith_mul [ RPAREN PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
arith -> arith . MINUS arith_mul [ RPAREN PLUS OR NEQ MINUS LT LE GT GE EQ AND ]
arith_atom -> LPAREN arith . RPAREN [ THEN STAR SLASH SEMI RPAREN RBRACK RBRACE PLUS OR NEQ MINUS LT LE GT GE EQ COMMA AND ]
iexpr_atom -> arith . relop arith [ RPAREN OR AND ]
iexpr_atom -> arith . [ RPAREN OR AND ]
## Transitions:
-- On RPAREN shift to state 35
-- On PLUS shift to state 36
-- On NEQ shift to state 50
-- On MINUS shift to state 38
-- On LT shift to state 51
-- On LE shift to state 52
-- On GT shift to state 53
-- On GE shift to state 54
-- On EQ shift to state 55
-- On relop shift to state 56
## Reductions:
-- On RPAREN OR AND
--   reduce production iexpr_atom -> arith
** Conflict on RPAREN

State 62:
## Known stack suffix:
## NOT iexpr_not
## LR(1) items:
iexpr_not -> NOT iexpr_not . [ THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND ]
## Transitions:
## Reductions:
-- On THEN SEMI RPAREN RBRACK RBRACE OR COMMA AND
--   reduce production iexpr_not -> NOT iexpr_not

State 63:
## Known stack suffix:
## PREK LPAREN iexpr
## LR(1) items:
hexpr -> PREK LPAREN iexpr . COMMA INT RPAREN [ SEMI RPAREN OR NEQ LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On COMMA shift to state 64
## Reductions:

State 64:
## Known stack suffix:
## PREK LPAREN iexpr COMMA
## LR(1) items:
hexpr -> PREK LPAREN iexpr COMMA . INT RPAREN [ SEMI RPAREN OR NEQ LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On INT shift to state 65
## Reductions:

State 65:
## Known stack suffix:
## PREK LPAREN iexpr COMMA INT
## LR(1) items:
hexpr -> PREK LPAREN iexpr COMMA INT . RPAREN [ SEMI RPAREN OR NEQ LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On RPAREN shift to state 66
## Reductions:

State 66:
## Known stack suffix:
## PREK LPAREN iexpr COMMA INT RPAREN
## LR(1) items:
hexpr -> PREK LPAREN iexpr COMMA INT RPAREN . [ SEMI RPAREN OR NEQ LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
## Reductions:
-- On SEMI RPAREN OR NEQ LT LE IMPL GT GE EQ COMMA AND
--   reduce production hexpr -> PREK LPAREN iexpr COMMA INT RPAREN

State 67:
## Known stack suffix:
## PRE
## LR(1) items:
hexpr -> PRE . LPAREN iexpr RPAREN [ SEMI RPAREN OR NEQ LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On LPAREN shift to state 68
## Reductions:

State 68:
## Known stack suffix:
## PRE LPAREN
## LR(1) items:
hexpr -> PRE LPAREN . iexpr RPAREN [ SEMI RPAREN OR NEQ LT LE IMPL GT GE EQ COMMA AND ]
## Transitions:
-- On NOT shift to state 22
-- On MINUS shift to state 23
-- On LPAREN shift to state 41
-- On INT shift to state 25
-- On IDENT shift to state 26
-- On iexpr_or shift to state 42
-- On iexpr_not shift to state 44
-- On iexpr_atom shift to state 45
-- On iexpr_and shift to state 58
-- On iexpr shift to state 69
-- On arith_unary shift to state 27
-- On arith_mul shift to state 28
-- On arith_atom shift to state 31
-- On arith shift to state 49
## Reductions:
